examples/test/testpolicy1201.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1201
  namespace: namespace492
spec:
  podSelector:
    matchLabels:
      key14: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value38
          key24: value47
          key35: value31
      podSelector:
        matchLabels:
          key2: value8
